--- a/instawork/src/containers/listPage/listpage.css
+++ b/instawork/src/containers/listPage/listpage.css
@@ -1,13 +1,28 @@
-.pageHeading {
-    background-color: rgb(230, 228, 228);
-    text-align: center;
-    padding-top: 20px;
-}
 .container-placeholder{
     margin:auto;
     width : 400px;
     height : 100px;
     margin-top: 10%;
+}
+.pageHeading {
+    background-color: rgb(230, 228, 228);
+    text-align: center;
+    margin: auto;
+    padding:2.5px
+}
+.main-container{
+    margin-top:5px;
+    background-color: rgb(230, 228, 228);
+    padding: 10px;
+    max-height: 700px;
+    overflow: hidden;
+}
+.sub-container{
+    padding :10px;
+    padding-left: 20px;
+    background-color: white;
+    height: 660px;
+    padding-bottom: 20px;
 }
 .icon{
     text-align: right;
@@ -17,12 +32,7 @@
     color: rgb(131, 131, 131);   
     font-size: 19px; 
 }
-.main-container{
-    background-color: rgb(230, 228, 228);
-    padding: 10px;
-}
-.sub-container{
-    padding :10px;
-    padding-left: 20px;
-    background-color: white;
+.user-list{
+    max-height: 500px;
+    overflow: auto;
 }
