--- a/instawork/src/containers/editPage/editpage.css
+++ b/instawork/src/containers/editPage/editpage.css
@@ -19,8 +19,8 @@
     padding-bottom: 20px;
     position: relative;
 }
-.icon{
-    text-align: right;
+.icon-edit-page{
+    text-align: left !important;
     cursor: pointer;
 }
 .user-list{
